@@ -30,6 +30,7 @@ Timestamp: #{Time.now}
 Message: #{e.message}
 Backtrace:
 #{e.backtrace.join("\n")}
+Release: #{Alexandria::VERSION}
 Uname -a: #{`uname -a`.chomp}
 --
 Please report this dump to '#{Alexandria::LIST}' with some additional
