@@ -70,7 +70,7 @@
 			      <accelerator key="L" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image507">
+				<widget class="GtkImage" id="image556">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-new</property>
 				  <property name="icon_size">1</property>
@@ -93,7 +93,7 @@
 			      <accelerator key="N" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image508">
+				<widget class="GtkImage" id="image557">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-add</property>
 				  <property name="icon_size">1</property>
@@ -121,7 +121,7 @@
 			      <accelerator key="I" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image509">
+				<widget class="GtkImage" id="image558">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-properties</property>
 				  <property name="icon_size">1</property>
@@ -195,7 +195,7 @@
 			      <accelerator key="Delete" modifiers="0" signal="activate"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image510">
+				<widget class="GtkImage" id="image559">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-delete</property>
 				  <property name="icon_size">1</property>
@@ -210,6 +210,44 @@
 
 			  <child>
 			    <widget class="GtkSeparatorMenuItem" id="separator15">
+			      <property name="visible">True</property>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkImageMenuItem" id="search1">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">_Search</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_search" last_modification_time="Sat, 05 Jun 2004 17:15:21 GMT"/>
+			      <accelerator key="F" modifiers="GDK_CONTROL_MASK" signal="activate"/>
+
+			      <child internal-child="image">
+				<widget class="GtkImage" id="image560">
+				  <property name="visible">True</property>
+				  <property name="stock">gtk-find</property>
+				  <property name="icon_size">1</property>
+				  <property name="xalign">0.5</property>
+				  <property name="yalign">0.5</property>
+				  <property name="xpad">0</property>
+				  <property name="ypad">0</property>
+				</widget>
+			      </child>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkMenuItem" id="clear_results1">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">_Clear Results</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_clear_search_results" last_modification_time="Sat, 05 Jun 2004 17:15:21 GMT"/>
+			      <accelerator key="B" modifiers="GDK_CONTROL_MASK | GDK_MOD1_MASK" signal="activate"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkSeparatorMenuItem" id="separator61">
 			      <property name="visible">True</property>
 			    </widget>
 			  </child>
@@ -243,7 +281,7 @@
 			      <accelerator key="R" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image511">
+				<widget class="GtkImage" id="image561">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-refresh</property>
 				  <property name="icon_size">1</property>
@@ -407,7 +445,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">View as _Icons</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <signal name="activate" handler="on_view_as_icons" last_modification_time="Sat, 27 Mar 2004 14:45:05 GMT"/>
 			    </widget>
 			  </child>
@@ -417,7 +455,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">View as _List</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">True</property>
+			      <property name="active">False</property>
 			      <property name="group">menu_view_as_icons</property>
 			      <signal name="activate" handler="on_view_as_list" last_modification_time="Sat, 27 Mar 2004 14:45:18 GMT"/>
 			    </widget>
@@ -443,7 +481,7 @@
 			      <signal name="activate" handler="on_submit_bug_report" last_modification_time="Sat, 15 May 2004 11:46:48 GMT"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image512">
+				<widget class="GtkImage" id="image562">
 				  <property name="visible">True</property>
 				  <property name="stock">gnome-stock-mail-new</property>
 				  <property name="icon_size">1</property>
@@ -583,6 +621,120 @@
 	      </child>
 
 	      <child>
+		<widget class="GtkToolItem" id="toolitem4">
+		  <property name="border_width">3</property>
+		  <property name="visible">True</property>
+		  <property name="visible_horizontal">True</property>
+		  <property name="visible_vertical">True</property>
+		  <property name="is_important">False</property>
+
+		  <child>
+		    <widget class="GtkOptionMenu" id="optionmenu1">
+		      <property name="visible">True</property>
+		      <property name="can_focus">True</property>
+		      <property name="history">0</property>
+
+		      <child>
+			<widget class="GtkMenu" id="menu2">
+
+			  <child>
+			    <widget class="GtkMenuItem" id="toolbar_filter_by_title">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Title contains</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_filter_by_title" last_modification_time="Sat, 05 Jun 2004 14:56:37 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkMenuItem" id="toolbar_filter_by_authors">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Authors contain</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_filter_by_authors" last_modification_time="Sat, 05 Jun 2004 14:56:37 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkMenuItem" id="toolbar_filter_by_isbn">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">ISBN contains</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_filter_by_isbn" last_modification_time="Sat, 05 Jun 2004 14:56:37 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkMenuItem" id="toolbar_filter_by_publisher">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Publisher contains</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_filter_by_publisher" last_modification_time="Sat, 05 Jun 2004 14:56:37 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkMenuItem" id="toolbar_filter_by_notes">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Notes contain</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_filter_by_notes" last_modification_time="Sat, 05 Jun 2004 14:56:37 GMT"/>
+			    </widget>
+			  </child>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+		</widget>
+		<packing>
+		  <property name="expand">False</property>
+		  <property name="homogeneous">False</property>
+		</packing>
+	      </child>
+
+	      <child>
+		<widget class="GtkToolItem" id="toolitem3">
+		  <property name="border_width">3</property>
+		  <property name="visible">True</property>
+		  <property name="visible_horizontal">True</property>
+		  <property name="visible_vertical">True</property>
+		  <property name="is_important">False</property>
+
+		  <child>
+		    <widget class="GtkEntry" id="filter_entry">
+		      <property name="visible">True</property>
+		      <property name="can_focus">True</property>
+		      <property name="editable">True</property>
+		      <property name="visibility">True</property>
+		      <property name="max_length">0</property>
+		      <property name="text" translatable="yes"></property>
+		      <property name="has_frame">True</property>
+		      <property name="invisible_char" translatable="yes">*</property>
+		      <property name="activates_default">False</property>
+		      <signal name="activate" handler="on_refresh" last_modification_time="Sat, 05 Jun 2004 14:51:22 GMT"/>
+		    </widget>
+		  </child>
+		</widget>
+		<packing>
+		  <property name="expand">True</property>
+		  <property name="homogeneous">False</property>
+		</packing>
+	      </child>
+
+	      <child>
+		<widget class="GtkSeparatorToolItem" id="separatortoolitem3">
+		  <property name="visible">True</property>
+		  <property name="draw">True</property>
+		  <property name="visible_horizontal">True</property>
+		  <property name="visible_vertical">True</property>
+		</widget>
+		<packing>
+		  <property name="expand">False</property>
+		  <property name="homogeneous">False</property>
+		</packing>
+	      </child>
+
+	      <child>
 		<widget class="GtkToolItem" id="toolitem2">
 		  <property name="border_width">3</property>
 		  <property name="visible">True</property>
@@ -634,7 +786,7 @@
 	  <property name="band">1</property>
 	  <property name="position">0</property>
 	  <property name="offset">0</property>
-	  <property name="behavior">BONOBO_DOCK_ITEM_BEH_EXCLUSIVE</property>
+	  <property name="behavior">BONOBO_DOCK_ITEM_BEH_EXCLUSIVE|BONOBO_DOCK_ITEM_BEH_LOCKED</property>
 	</packing>
       </child>
 
